--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,27 @@
+:root{
+  --body-bg: #fff;
+  --body-bg-dark: #121212;
+  --text-color: black;
+  --text-color-dark: #fff;
+  --toggle-size: 2rem;
+  --container-width: 3em;
+  --container-height: 1.33em;
+  --container-radius: 3.33em;
+  --container-light-bg: #3D7EAE;
+  --container-night-bg: #1D1F2C;
+  --circle-container-diameter: 1.797em;
+  --sun-moon-diameter: 1.13em;
+  --sun-bg: #ECCA2F;
+  --moon-bg: #C4C9D1;
+  --spot-color: #959DB1;
+  --circle-container-offset: calc((var(--circle-container-diameter) - var(--container-height)) / 2 * -1);
+  --stars-color: #fff;
+  --clouds-color: #F3FDFF;
+  --back-clouds-color: #AACADF;
+  --transition: .5s cubic-bezier(0, -0.02, 0.4, 1.25);
+  --circle-transition: .3s cubic-bezier(0, -0.02, 0.35, 1.17);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +29,210 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  width: 100%;
+  background: var(--body-bg);
+  color: var(--text-color);
+  transition: color 0.2s ease-in, background 0.2s ease-in;
+}
+
+.darkMode{
+  background: var(--body-bg-dark);
+  color: var(--text-color-dark);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.navbar{
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  width: calc(100% - 6rem);
+  padding: 1rem 3rem;
+}
+
+.theme-switch, .theme-switch *, .theme-switch *::before, .theme-switch *::after {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-size: var(--toggle-size);
+}
+
+.theme-switch__container {
+  width: var(--container-width);
+  height: var(--container-height);
+  background-color: var(--container-light-bg);
+  border-radius: var(--container-radius);
+  overflow: hidden;
+  cursor: pointer;
+  -webkit-box-shadow: 0em -0.033em 0.033em rgba(0, 0, 0, 0.25), 0em 0.033em 0.066em rgba(255, 255, 255, 0.94);
+  box-shadow: 0em -0.062em 0.033em rgba(0, 0, 0, 0.25), 0em 0.033em 0.066em rgba(255, 255, 255, 0.94);
+  -webkit-transition: var(--transition);
+  -o-transition: var(--transition);
+  transition: var(--transition);
+  position: relative;
+}
+
+.theme-switch__container::before {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  inset: 0;
+  -webkit-box-shadow: 0em 0.0266em 0.0997em rgba(0, 0, 0, 0.25) inset, 0em 0.0266em 0.0997em rgba(0, 0, 0, 0.25) inset;
+  box-shadow: 0em 0.0266em 0.0997em rgba(0, 0, 0, 0.25) inset, 0em 0.0266em 0.0997em rgba(0, 0, 0, 0.25) inset;
+  border-radius: var(--container-radius)
+}
+
+.theme-switch__checkbox {
+  display: none;
+}
+
+.theme-switch__circle-container {
+  width: var(--circle-container-diameter);
+  height: var(--circle-container-diameter);
+  background-color: rgba(255, 255, 255, 0.1);
+  position: absolute;
+  left: var(--circle-container-offset);
+  top: var(--circle-container-offset);
+  border-radius: var(--container-radius);
+  -webkit-box-shadow: inset 0 0 0 1.8em rgba(255, 255, 255, 0.1), inset 0 0 0 1.8em rgba(255, 255, 255, 0.1), 0 0 0 0.33em rgba(255, 255, 255, 0.1), 0 0 0 0.67em rgba(255, 255, 255, 0.1);
+  box-shadow: inset 0 0 0 1.8em rgba(255, 255, 255, 0.1), inset 0 0 0 1.8em rgba(255, 255, 255, 0.1), 0 0 0 0.33em rgba(255, 255, 255, 0.1), 0 0 0 0.67em rgba(255, 255, 255, 0.1);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-transition: var(--circle-transition);
+  -o-transition: var(--circle-transition);
+  transition: var(--circle-transition);
+  pointer-events: none;
+}
+
+.theme-switch__sun-moon-container {
+  pointer-events: auto;
+  position: relative;
+  z-index: 2;
+  width: var(--sun-moon-diameter);
+  height: var(--sun-moon-diameter);
+  margin: auto;
+  border-radius: var(--container-radius);
+  background-color: var(--sun-bg);
+  -webkit-box-shadow: 0.033em 0.033em 0.033em 0em rgba(254, 255, 239, 0.61) inset, 0em -0.033em 0.033em 0em #a1872a inset;
+  box-shadow: 0.033em 0.033em 0.033em 0em rgba(254, 255, 239, 0.61) inset, 0em -0.033em 0.033em 0em #a1872a inset;
+  -webkit-filter: drop-shadow(0.033em 0.066em 0.066em rgba(0, 0, 0, 0.25)) drop-shadow(0em 0.062em 0.066em rgba(0, 0, 0, 0.25));
+  filter: drop-shadow(0.033em 0.066em 0.066em rgba(0, 0, 0, 0.25)) drop-shadow(0em 0.062em 0.066em rgba(0, 0, 0, 0.25));
+  overflow: hidden;
+  -webkit-transition: var(--transition);
+  -o-transition: var(--transition);
+  transition: var(--transition);
+}
+
+.theme-switch__moon {
+  -webkit-transform: translateX(100%);
+  -ms-transform: translateX(100%);
+  transform: translateX(100%);
+  width: 100%;
+  height: 100%;
+  background-color: var(--moon-bg);
+  border-radius: inherit;
+  -webkit-box-shadow: 0.033em 0.033em 0.033em 0em rgba(254, 255, 239, 0.61) inset, 0em -0.033em 0.033em 0em #969696 inset;
+  box-shadow: 0.033em 0.033em 0.033em 0em rgba(254, 255, 239, 0.61) inset, 0em -0.033em 0.033em 0em #969696 inset;
+  -webkit-transition: var(--transition);
+  -o-transition: var(--transition);
+  transition: var(--transition);
+  position: relative;
+}
+
+.theme-switch__spot {
+  position: absolute;
+  top: 0.4em;
+  left: 0.166em;
+  width: 0.4em;
+  height: 0.4em;
+  border-radius: var(--container-radius);
+  background-color: var(--spot-color);
+  -webkit-box-shadow: 0em 0.0166em 0.033em rgba(0, 0, 0, 0.25) inset;
+  box-shadow: 0em 0.0166em 0.033em rgba(0, 0, 0, 0.25) inset;
+}
+
+.theme-switch__spot:nth-of-type(2) {
+  width: 0.2em;
+  height: 0.2em;
+  top: 0.5em;
+  left: 0.733em;
+}
+
+.theme-switch__spot:nth-last-of-type(3) {
+  width: 0.133em;
+  height: 0.133em;
+  top: 0.166em;
+  left: 0.433em;
+}
+
+.theme-switch__clouds {
+  width: 0.67em;
+  height: 0.67em;
+  background-color: var(--clouds-color);
+  border-radius: var(--container-radius);
+  position: absolute;
+  bottom: -0.33em;
+  left: 0.166em;
+  -webkit-box-shadow: 0.5em 0.1664em var(--clouds-color), -0.1664em -0.1664em var(--back-clouds-color), 0.7664em 0.2em var(--clouds-color), 0.267em -0.066em var(--back-clouds-color), 1.1664em 0 var(--clouds-color), 0.67em -0.033em var(--back-clouds-color), 1.5859em 0.1664em var(--clouds-color), 1.067em -0.1664em var(--back-clouds-color), 1.93em -0.033em var(--clouds-color), 1.4em 0em var(--back-clouds-color), 2.4em -0.1664em var(--clouds-color), 1.8em -0.233em var(--back-clouds-color), 2.467em -0.933em 0 0.233em var(--clouds-color), 2.133em -0.33em var(--back-clouds-color), 2.2em -1.133em 0 0.233em var(--back-clouds-color);
+  box-shadow: 0.5em 0.1664em var(--clouds-color), -0.1664em -0.1664em var(--back-clouds-color), 0.7664em 0.2em var(--clouds-color), 0.267em -0.066em var(--back-clouds-color), 1.1664em 0 var(--clouds-color), 0.67em -0.033em var(--back-clouds-color), 1.5859em 0.1664em var(--clouds-color), 1.067em -0.1664em var(--back-clouds-color), 1.93em -0.033em var(--clouds-color), 1.4em 0em var(--back-clouds-color), 2.4em -0.1664em var(--clouds-color), 1.8em -0.233em var(--back-clouds-color), 2.467em -0.933em 0 0.233em var(--clouds-color), 2.133em -0.33em var(--back-clouds-color), 2.2em -1.133em 0 0.233em var(--back-clouds-color);
+  -webkit-transition: 0.5s cubic-bezier(0, -0.02, 0.4, 1.25);
+  -o-transition: 0.5s cubic-bezier(0, -0.02, 0.4, 1.25);
+  transition: 0.5s cubic-bezier(0, -0.02, 0.4, 1.25);
+}
+
+.theme-switch__stars-container {
+  position: absolute;
+  color: var(--stars-color);
+  top: -100%;
+  left: 0.166em;
+  width: 1.47em;
+  height: auto;
+  -webkit-transition: var(--transition);
+  -o-transition: var(--transition);
+  transition: var(--transition);
+}
+
+.theme-switch__checkbox:checked + .theme-switch__container {
+  background-color: var(--container-night-bg);
+}
+
+.theme-switch__checkbox:checked + .theme-switch__container .theme-switch__circle-container {
+  left: calc(100% - var(--circle-container-offset) - var(--circle-container-diameter));
+}
+
+.theme-switch__checkbox:checked + .theme-switch__container .theme-switch__circle-container:hover {
+  left: calc(100% - var(--circle-container-offset) - var(--circle-container-diameter) - 0.099em)
+}
+
+.theme-switch__circle-container:hover {
+  left: calc(var(--circle-container-offset) + 0.099em);
+}
+
+.theme-switch__checkbox:checked + .theme-switch__container .theme-switch__moon {
+  -webkit-transform: translate(0);
+  -ms-transform: translate(0);
+  transform: translate(0);
+}
+
+.theme-switch__checkbox:checked + .theme-switch__container .theme-switch__clouds {
+  bottom: -2.166em;
+}
+
+.theme-switch__checkbox:checked + .theme-switch__container .theme-switch__stars-container {
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
